# ClimaMacro-CL

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: config.yaml
src/ingestion/: bcentral_client.py  noaa_client.py
